Remove padding on logo image files and fix spacing to compensate

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -307,6 +307,10 @@ p {
   margin-bottom: 0;
 }
 
+img.landing-logo {
+  margin-bottom: 20px;
+}
+
 img.hackdavis {
   width: 18em;
   height: auto;
